# task-spooler

./: .all-contributorsrc  .gitignore  .hg_archival.txt  .hgignore  .hgtags  CHANGELOG.md  CMakeLists.txt  Changelog  INSTALL.md  Makefile  OBJECTIVES  PORTABILITY  PROTOCOL  README  README.md  TRICKS  TRICKS.md  auto-changelog  buglist.bug  client.c  default.inc  env.c  error.c  execute.c  gpu.c  info.c  install  install_cmake  install_make  jobs.c  kill_ppid.sh  list.c  mail.c  main.c  main.h  makedeb  man.c  msg.c  msgdump.c  mymail.sh  (+22 more)
.github/workflows/: build.yml
deb/pkg/DEBIAN/: control
debian-pkg/: changelog  control  docs  rules
gentoo/: ts-0.5.2.ebuild
web/: article_linux_com.html  index.html  ts-0.5.4.ebuild
